--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -100,7 +100,7 @@
         },
         "outputId": "24bb741f-346e-4ee1-96f2-6b85b28481d6"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +123,7 @@
         },
         "outputId": "8810b84d-39e8-42a4-bd0b-62b44a1f0333"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,7 +149,7 @@
         "id": "AF0o0MbnVlo7",
         "outputId": "f2568541-2897-499b-dc1b-cb8589c2ce20"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
         "id": "hoa2S5cwWsN8",
         "outputId": "9c6aa385-a178-4f49-d06c-fc0bbbce29a8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,7 +205,7 @@
         "id": "xMCulYVLW0y6",
         "outputId": "d83f2f2c-48ff-4227-f66a-eaebc702bbe5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +229,7 @@
         "id": "_5BQKApcXtXJ",
         "outputId": "11e0cb76-0993-43b6-8c27-ea5e822a9174"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +257,7 @@
         "id": "Rkqonr7MYxii",
         "outputId": "4c5e35bb-a51d-4558-f96d-3b07cae8c2b5"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +280,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,7 +303,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,7 +326,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,7 +372,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombre = 'Daniel'"
+      ],
       "metadata": {
         "id": "vsHh5buZADND"
       },
@@ -381,7 +383,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "edad =  29"
+      ],
       "metadata": {
         "id": "sivPtqSjADQV"
       },
@@ -489,21 +493,46 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombre = 'Penelope Camacho'\n",
+        "edad = 11\n",
+        "promedio = 9.75\n",
+        "aprobado = True"
+      ],
       "metadata": {
         "id": "FabQ7jQf_8Xt"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(type(nombre))\n",
+        "print(type(edad))\n",
+        "print(type(promedio))\n",
+        "print(type(aprobado))"
+      ],
       "metadata": {
-        "id": "IZLQnZUj_8bd"
+        "id": "IZLQnZUj_8bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "def9cd56-dd20-464f-9c11-019d54919ced"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'str'>\n",
+            "<class 'int'>\n",
+            "<class 'float'>\n",
+            "<class 'bool'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -539,30 +568,109 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "c_vigilantes = 5\n",
+        "c_docentes = 16\n",
+        "c_coordinadores = 2\n",
+        "\n",
+        "s_vigilantes = 300\n",
+        "s_docentes = 500\n",
+        "s_coordinadores = 600"
+      ],
       "metadata": {
         "id": "F_X-wxdm_5Ys"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "total_empleados = c_vigilantes + c_docentes + c_coordinadores\n",
+        "total_empleados"
+      ],
       "metadata": {
-        "id": "gKmBbhII_5b9"
+        "id": "gKmBbhII_5b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "945c7c52-7e6b-41d4-850d-592794a3c871"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "23"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "diferencia = s_coordinadores - s_vigilantes\n",
+        "diferencia"
+      ],
       "metadata": {
-        "id": "fIugsxNy_53j"
+        "id": "fIugsxNy_53j",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "41e437a3-d7af-44d8-f765-b2ee3a5a1b7d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "300"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "promedio = (s_vigilantes * c_vigilantes + s_docentes * c_docentes + s_coordinadores * c_coordinadores) / (c_vigilantes + c_docentes + c_coordinadores)\n",
+        "print(type(promedio))\n",
+        "promedio"
+      ],
+      "metadata": {
+        "id": "O1sX6E7MZCtk",
+        "outputId": "905b1a5b-affc-4816-ca9e-c4946d593983",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'float'>\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "465.2173913043478"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -586,11 +694,13 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombre = \"Daniel\""
+      ],
       "metadata": {
         "id": "ityEWqvh_2wK"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -628,7 +738,7 @@
       "metadata": {
         "id": "icDWtYTjBO0n"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -656,12 +766,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.upper()"
+      ],
       "metadata": {
-        "id": "wMVshJrY_ZXh"
+        "id": "wMVshJrY_ZXh",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "183adad5-f88a-4f41-91c1-770828fb7065"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'  MICAELA DE LOS SANYOS '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -675,12 +806,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.lower()"
+      ],
       "metadata": {
-        "id": "px3yEeNH_YK4"
+        "id": "px3yEeNH_YK4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "d8b8aa96-a855-4e51-93fb-d315128162dd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'  micaela de los sanyos '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -694,12 +846,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.strip()"
+      ],
       "metadata": {
-        "id": "76dLgNa4_XAe"
+        "id": "76dLgNa4_XAe",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "02bf01a7-119b-462f-d2d3-4481db21175b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Micaela de los Sanyos'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -714,12 +887,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.replace('y','t')"
+      ],
       "metadata": {
-        "id": "PNXAixtE_V6R"
+        "id": "PNXAixtE_V6R",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "30be5990-da83-46c6-8e00-fd907bdec375"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'  Micaela de los Santos '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -736,12 +930,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "texto.strip().replace('y','t').upper()"
+      ],
       "metadata": {
-        "id": "JjkBRklr_T5n"
+        "id": "JjkBRklr_T5n",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "28ee148e-77ce-44c4-f172-8921574898d9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'MICAELA DE LOS SANTOS'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -751,24 +966,6 @@
       "metadata": {
         "id": "1KbwfVut2h6I"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ocPP-Jaj_SJI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "m1RvLGZZ_SP3"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
