Avanzando con el aula numero 2

--- a/Python_Data_Science.ipynb
+++ b/Python_Data_Science.ipynb
@@ -645,11 +645,11 @@
         "promedio"
       ],
       "metadata": {
-        "id": "O1sX6E7MZCtk",
-        "outputId": "905b1a5b-affc-4816-ca9e-c4946d593983",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "O1sX6E7MZCtk",
+        "outputId": "905b1a5b-affc-4816-ca9e-c4946d593983"
       },
       "execution_count": 9,
       "outputs": [
@@ -970,6 +970,105 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Otros Operadores"
+      ],
+      "metadata": {
+        "id": "0F2-FedWamNi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exponenciación (**)\n",
+        "\n",
+        "operador = 2\n",
+        "potencia = 3\n",
+        "operador ** potencia"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bo8yOqliavNm",
+        "outputId": "218331ee-c548-4299-f739-25dce94d5fdb"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Módulo (%)\n",
+        "\n",
+        "dividendo = 7\n",
+        "divisor = 3\n",
+        "dividendo % divisor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pZgR5czwa3rz",
+        "outputId": "d8b0e2d0-39c3-4723-af83-3c3ccd630887"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# División entera (//)\n",
+        "\n",
+        "numerador = 7\n",
+        "denominador = 3\n",
+        "numerador // denominador"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nWu3K23QbCmB",
+        "outputId": "3e50d086-f8dd-4fda-fc2c-2645a43b27ed"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Capturando datos\n",
         "\n",
         "En algunas aplicaciones necesitamos capturar los valores del usuario de nuestro proyecto. En python, logramos capturar los datos del usuario a través del comando [`input()`](https://docs.python.org/3/library/functions.html#input).\n",
@@ -982,21 +1081,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nombre = input('¿Cuál es tu nombre? ')"
+      ],
       "metadata": {
-        "id": "zbH_9i3q_PdY"
+        "id": "zbH_9i3q_PdY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6b250a3c-4e4a-46b0-de17-246b46dc4e29"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "¿Cuál es tu nombre? Daniel\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(nombre)"
+      ],
       "metadata": {
-        "id": "JZy1Q9Tl_PgL"
+        "id": "JZy1Q9Tl_PgL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e9d3f48f-13ef-474f-c27a-1767fd47eda8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1025,30 +1155,101 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "ano_admision = int(input('¿En qué año ingresaste a la escuela? '))"
+      ],
       "metadata": {
-        "id": "M2ueeH6l_NMe"
+        "id": "M2ueeH6l_NMe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "036a82d6-6b2f-46f4-a54c-a5b8ee9bb905"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "¿En qué año ingresaste a la escuela? 2025\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "type(ano_admision)"
+      ],
       "metadata": {
-        "id": "xfWwuViK_NUn"
+        "id": "xfWwuViK_NUn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "076dc041-0484-4f56-8bf3-cb823ad31f0a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "nota_admision = float(input('¿Cuál fue tu promedio en el semestre anterior? '))"
+      ],
       "metadata": {
-        "id": "uFCHDyew_NZm"
+        "id": "uFCHDyew_NZm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cd568447-89a1-49b5-8eb8-c2f6d4dc4937"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "¿Cuál fue tu promedio en el semestre anterior? 9.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(nota_admision)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8FCaC_9hc6Q8",
+        "outputId": "9a1efa09-a8de-441b-ac7f-f3b1a98725c3"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1063,12 +1264,319 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(f'\\tEl año de admision es: {ano_admision}\\n\\tLa nota de admisión es: {nota_admision}')\n"
+      ],
       "metadata": {
-        "id": "keJjA5N9_K5i"
+        "id": "keJjA5N9_K5i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a2ff705a-aaa5-45fc-b645-9c13ea552928"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\tEl año de admision es: 2025\n",
+            "\tLa nota de admisión es: 9.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre = \"Ana María\"\n",
+        "edad = 17\n",
+        "print(f\"El nombre de la alumna es {nombre} y su edad es {edad} años.\")"
+      ],
+      "metadata": {
+        "id": "R7qnUfsvf1ht",
+        "outputId": "31c741df-22ec-4d7c-ae7b-78d1daf3defd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El nombre de la alumna es Ana María y su edad es 17 años.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre_alumno = 'Penélope Camacho'\n",
+        "print('Nombre del alumno: %s' %(nombre_alumno))"
+      ],
+      "metadata": {
+        "id": "8MngVi9mgje7",
+        "outputId": "2b021627-04a4-4391-9ca2-013e2840f2ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nombre del alumno: Penélope Camacho\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre_alumno = 'Penélope Camacho'\n",
+        "edad_alumno = 11\n",
+        "media_alumno = 9.95\n",
+        "print('Nombre del alumno es %s, tiene %d años y su media es %f.' %(nombre_alumno, edad_alumno, media_alumno))"
+      ],
+      "metadata": {
+        "id": "6h6R19b_gkze",
+        "outputId": "63fcb63d-41a4-427c-d051-b526ce83ebdc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nombre del alumno es Penélope Camacho, tiene 11 años y su media es 9.950000.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Nombre del alumno es %s, tiene %d años y su media es %.2f.' %(nombre_alumno, edad_alumno, media_alumno))"
+      ],
+      "metadata": {
+        "id": "qrrgKTNRg9Kr",
+        "outputId": "09614f6b-37e3-4570-8c86-020d5cc928d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nombre del alumno es Penélope Camacho, tiene 11 años y su media es 9.95.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = True\n",
+        "print(\"Valor de x: %s\" % str(x))"
+      ],
+      "metadata": {
+        "id": "1esBdQmlhIdR",
+        "outputId": "26720433-4996-4cb7-e11f-4f6641c402ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Valor de x: True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre_alumno = 'Penélope Camacho'\n",
+        "print('Nombre del alumno: {}'.format(nombre_alumno))"
+      ],
+      "metadata": {
+        "id": "6joV2OvwhS9X",
+        "outputId": "c9cd75fa-94f4-440c-a70d-ee2e2ba489cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nombre del alumno: Penélope Camacho\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nombre_alumno = 'Fabricio Daniel'\n",
+        "edad_alumno = 15\n",
+        "media_alumno = 9.95\n",
+        "print('Nombre del alumno es {}, tiene {} años y su media es {}.' .format(nombre_alumno, edad_alumno, media_alumno))\n"
+      ],
+      "metadata": {
+        "id": "nCrs05LMhZjY",
+        "outputId": "a16d8730-f368-4954-b7fb-992b652a1dff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nombre del alumno es Fabricio Daniel, tiene 15 años y su media es 9.95.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Estudiar es un esfuerzo constante,\\nEs como cultivar una planta,\\nNecesitamos dedicación y paciencia,\\nPara ver madurar el fruto.\")\n"
+      ],
+      "metadata": {
+        "id": "ykfANBURhsUI",
+        "outputId": "2d3aa613-87be-4833-ee02-8679d9951312",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Estudiar es un esfuerzo constante,\n",
+            "Es como cultivar una planta,\n",
+            "Necesitamos dedicación y paciencia,\n",
+            "Para ver madurar el fruto.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Cantidad\\tCalidad\\n5 muestras\\tAlta\\n3 muestras\\tBaja')"
+      ],
+      "metadata": {
+        "id": "w4ZVY7k6hxFV",
+        "outputId": "62c05d03-2a64-43a9-adb0-84528c670cf4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cantidad\tCalidad\n",
+            "5 muestras\tAlta\n",
+            "3 muestras\tBaja\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Ruta del archivo: C:\\\\archivos\\\\documento.csv\")"
+      ],
+      "metadata": {
+        "id": "eEQ_Nq5gh6vk",
+        "outputId": "bf0b19e3-29fe-4d6e-e69c-6407890f27ac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ruta del archivo: C:\\archivos\\documento.csv\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Una vez oí: \\\"Los frutos del conocimiento son los más dulces y duraderos de todos.\\\"\")"
+      ],
+      "metadata": {
+        "id": "a4Gcrnj2iFUl",
+        "outputId": "7697e0e6-f1fa-4997-f64e-f6f1508951aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Una vez oí: \"Los frutos del conocimiento son los más dulces y duraderos de todos.\"\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Mi profesora una vez dijo: \\'Estudiar es la clave del éxito.\\'')"
+      ],
+      "metadata": {
+        "id": "rRNwuwZdiMWN",
+        "outputId": "30aa3356-2b90-4bd9-b5e0-2bd10503c3c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mi profesora una vez dijo: 'Estudiar es la clave del éxito.'\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
